--- a/generators/rtl/test/case_5/tb/testbench.rdl
+++ b/generators/rtl/test/case_5/tb/testbench.rdl
@@ -13,59 +13,71 @@ reg shared_reg {
 };
 
 addrmap reg_top {
+    hj_genmst = true;
+	hj_flatten_addrmap = false;
     addrmap {
-        hj_genslv = true;
-
-        reg REG1_def {
-            field {
-                sw = rw;
-            } FIELD_0[31:0] = 0xaaaaaaaa;
-        } REG1;
-
-        // implement alias register
-        alias REG1 REG1_def REG1_alias_1, REG1_alias_2, REG1_alias_3,
-                            REG1_alias_4, REG1_alias_5, REG1_alias_6,
-                            REG1_alias_7, REG1_alias_8, REG1_alias_9,
-                            REG1_alias_10;
-
-        REG1_alias_1.FIELD_0 -> sw = r;
-        REG1_alias_2.FIELD_0 -> sw = w;
-        REG1_alias_3.FIELD_0 -> onread = rclr;
-        REG1_alias_4.FIELD_0 -> onread = rset;
-        REG1_alias_5.FIELD_0 -> onwrite = woclr;
-        REG1_alias_6.FIELD_0 -> onwrite = woset;
-        REG1_alias_7.FIELD_0 -> onwrite = wot;
-        REG1_alias_8.FIELD_0 -> onwrite = wzs;
-        REG1_alias_9.FIELD_0 -> onwrite = wzc;
-        REG1_alias_10.FIELD_0 -> onwrite = wzt;
-
-        // implement internal registers
+        hj_gendisp = true;
+	    hj_flatten_addrmap = false;
         addrmap {
-            hj_genslv = false;
+            hj_gendisp = false;
+            hj_genslv = true;
+            hj_flatten_addrmap = false;
 
-            // test reset values
-            shared_reg shared_21, shared_22, shared_23, shared_24, shared_25,
-                       shared_26, shared_27, shared_28, shared_29, shared_210;
+            reg REG1_def {
+                field {
+                    sw = rw;
+                } FIELD_0[31:0] = 0xaaaaaaaa;
+            } REG1;
 
-            shared_21.FIELD_0 -> hj_syncresetsignal = "srst_1";
-            shared_21.FIELD_0 -> sw = r;
-            shared_22.FIELD_0 -> sw = w;
-            shared_23.FIELD_0 -> onread = rclr;
-            shared_24.FIELD_0 -> onread = rset;
-            shared_25.FIELD_0 -> onwrite = woclr;
-            shared_26.FIELD_0 -> onwrite = woset;
-            shared_27.FIELD_0 -> onwrite = wot;
-            shared_28.FIELD_0 -> onwrite = wzs;
-            shared_29.FIELD_0 -> onwrite = wzc;
-            shared_210.FIELD_0 -> onwrite = wzt;
-        } test_2;
+            // implement alias register
+            alias REG1 REG1_def REG1_alias_1, REG1_alias_2, REG1_alias_3,
+                                REG1_alias_4, REG1_alias_5, REG1_alias_6,
+                                REG1_alias_7, REG1_alias_8, REG1_alias_9,
+                                REG1_alias_10;
 
-        addrmap {
-            hj_genslv = false;
-            // test reset values
-            shared_reg shared_31;
-            shared_31.FIELD_0 -> hj_syncresetsignal = "srst_2";
-        } test_3;
+            REG1_alias_1.FIELD_0 -> sw = r;
+            REG1_alias_2.FIELD_0 -> sw = w;
+            REG1_alias_3.FIELD_0 -> onread = rclr;
+            REG1_alias_4.FIELD_0 -> onread = rset;
+            REG1_alias_5.FIELD_0 -> onwrite = woclr;
+            REG1_alias_6.FIELD_0 -> onwrite = woset;
+            REG1_alias_7.FIELD_0 -> onwrite = wot;
+            REG1_alias_8.FIELD_0 -> onwrite = wzs;
+            REG1_alias_9.FIELD_0 -> onwrite = wzc;
+            REG1_alias_10.FIELD_0 -> onwrite = wzt;
 
-    } reg_block_1;
+            // implement internal registers
+            addrmap {
+                hj_gendisp = false;
+                hj_genslv = false;
+                hj_flatten_addrmap = true;
+
+                // test reset values
+                shared_reg shared_21, shared_22, shared_23, shared_24, shared_25,
+                        shared_26, shared_27, shared_28, shared_29, shared_210;
+
+                shared_21.FIELD_0 -> hj_syncresetsignal = "srst_1";
+                shared_21.FIELD_0 -> sw = r;
+                shared_22.FIELD_0 -> sw = w;
+                shared_23.FIELD_0 -> onread = rclr;
+                shared_24.FIELD_0 -> onread = rset;
+                shared_25.FIELD_0 -> onwrite = woclr;
+                shared_26.FIELD_0 -> onwrite = woset;
+                shared_27.FIELD_0 -> onwrite = wot;
+                shared_28.FIELD_0 -> onwrite = wzs;
+                shared_29.FIELD_0 -> onwrite = wzc;
+                shared_210.FIELD_0 -> onwrite = wzt;
+            } test_2;
+
+            addrmap {
+                hj_gendisp = false;
+                hj_genslv = false;
+                hj_flatten_addrmap = true;
+                // test reset values
+                shared_reg shared_31;
+                shared_31.FIELD_0 -> hj_syncresetsignal = "srst_2";
+            } test_3;
+
+        } reg_block_1;
+    } disp_top;
 };
