--- a/generators/rtl/templates/regdisp_template.jinja
+++ b/generators/rtl/templates/regdisp_template.jinja
@@ -53,7 +53,7 @@ module {{get_rtl_name(disp_node)}} (
     logic   [FORWARD_NUM-1:0] [ADDR_WIDTH-1:0]  downstream__addr_imux;
     logic   [FORWARD_NUM-1:0]   downstream__wr_en_imux;
     logic   [FORWARD_NUM-1:0]   downstream__rd_en_imux;
-    logic   [FORWARD_NUM-1:0]   downstream__wr_data_imux;
+    logic   [FORWARD_NUM-1:0] [DATA_WIDTH-1:0]  downstream__wr_data_imux;
 
     logic   upstream__ack_vld_pre;
     logic   [DATA_WIDTH-1:0]    upstream__rd_data_pre;
@@ -96,7 +96,7 @@ module {{get_rtl_name(disp_node)}} (
         end
     end
 
-    // generate address offset
+    // generate address offset and forward other signals
     //      for regdisp, generate absolute address
     //      for regslv, generate address offset
     //      for 3rd party IP, generate absolute address
@@ -107,6 +107,15 @@ module {{get_rtl_name(disp_node)}} (
     //          simply set several higher bits to 0 by wire slicing
     //      2. otherwise:
     //          subtract base address from absolute address by generating a subtractor
+    always_comb begin
+        for (integer i = 0; i < FORWARD_NUM; i = i + 1) begin
+            downstream__req_vld_pre[i]  = downstream__req_vld_imux[i];
+            downstream__wr_en_pre[i]    = downstream__wr_en_imux[i];
+            downstream__rd_en_pre[i]    = downstream__rd_en_imux[i];
+            downstream__wr_data_pre[i]  = downstream__wr_data_imux[i];
+        end
+    end
+
     {%- for child in disp_node.children(unroll=True, skip_not_present=False) -%}
     {%- if use_abs_addr(child) %}
     {{"assign  downstream__addr_pre[%d] = downstream__addr_imux[%d];"|format(loop.index0,
