modify regmst: add template

--- a/test/test.rdl
+++ b/test/test.rdl
@@ -70,4 +70,7 @@ addrmap template_mst {
         // or designers can define an addrmap here
 		template_slv template_slv;
 	} template_disp;
+	// reg { regwidth = 64; field {sw=r;} ADDR[63:0] = 0x0;} db_err_addr;
+	// reg { field {} CNT[31:0] = 0x63;} db_rst_tmr;
+	// reg { field {} ASSERT[0:0] = 0x0;} db_soft_rst;
 };
