fix: regslv port: rtsn to rst_n

--- a/test/cmn_700.rdl
+++ b/test/cmn_700.rdl
@@ -8,7 +8,5 @@ addrmap template_mst {
 
 		cmn700_registers cmn700 @0x200000000;
 	} template_disp;
-	// reg { regwidth = 64; field {sw=r;} ADDR[63:0] = 0x0;} db_err_addr;
-	// reg { field {} CNT[31:0] = 0x63;} db_rst_tmr;
-	// reg { field {} ASSERT[0:0] = 0x0;} db_soft_rst;
+	db_regs db_regs %= 0x1000;
 };
